updated readme.txt